# microservices_app

./: README.md  docker-compose.yml  scripts.py
auth/auth_service/: Cargo.toml  build.rs
auth/auth_service/src/: main.rs
auth/auth_service/src/components/: mod.rs
auth/auth_service/src/components/redis/: crud.rs
auth/auth_service/src/components/rpc/: auth_rpc.rs  mod.rs
auth/protos/: auth.proto
example_client/: index.js  package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/: App.js
mnist_worker/: Dockerfile
next-app/: Dockerfile  package-lock.json  package.json
next-app/components/: auth_pb.js  auth_service.jsx
next-app/pages/: index.js
next-app/pages/api/: auth.js  auth.proto
producer/: Cargo.toml  build.rs
producer/protos/: todo.proto
producer/src/: client.rs  server.rs
