[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "producer"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"



[dependencies]
tonic = "0.7"
prost = "0.10"
rand = "0.7.3"
tokio = { version = "1", features = ["macros","rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"